--- a/css/style.css
+++ b/css/style.css
@@ -256,9 +256,7 @@ color: #000000 ! important;
 
 }
 
-#nouvelarticle form {
-    height: 1000px;
-}
+
 
 
 
@@ -454,7 +452,6 @@ color: #ffffff;
 }
 
 form{
-	padding : 80px;
 	background-color: #fafafa;
 	box-shadow: 0px 20px 100px 0px #656565;
 	align-items: center;
@@ -464,6 +461,7 @@ form{
 }
 
 input{
+
 	width : 30%;
 	min-width: 100px;
 	height : 30px;
@@ -471,6 +469,8 @@ input{
 	border: 1px solid #656565;
 	text-align: center;
 	margin-top: 5px ! important;
+	box-shadow: 0px 0px 10px #343434;
+	background: linear-gradient(#cfcfcf, #656565);
 
 }
 
@@ -491,6 +491,7 @@ input{
 /******************************************/
 
 #formulaire{
+
 	margin-top: 50px;
   	background-color: #fafafa;	
 }
@@ -506,10 +507,11 @@ input{
 #formulaire_contact {
 	height: 500px !important;
 	margin-bottom: 25px;
+	margin-top: 25px;
 }
 
 #photocontact{
-	padding-top: 80px;
+	
 	height: auto;
 }
 
@@ -522,6 +524,7 @@ input{
 /******************************************/
 #nouvelarticle{
 	margin-top: 100px;
+	margin-bottom: 150px; 
 	height: 900px;
 
 }
@@ -603,4 +606,21 @@ input{
   	margin-right: auto;
 
 }
+
+
+@media screen and (max-width: 425px)
+{
+
+#photocontact{
+	
+	display : none;
+}
+
+#auteur, #titre, #date {
+
+	
+	width: 100% ! important;
+}
+}
+
 
