--- a/css/tiny.css
+++ b/css/tiny.css
@@ -10,6 +10,15 @@
 	height : 30px;
 	
 }
+
+#auteur, #titre, #date {
+
+	background-color: #ffffff;
+	background: none;
+	width: 80%;
+}
+
+
 .tox-tinymce{
 
 	height: 375px !important;
@@ -18,7 +27,7 @@
 .bloctiny {
 
 	width : 100%;
-	;
+	
 	margin-bottom: 15px;
 }
 
