--- a/css/styles.css
+++ b/css/styles.css
@@ -408,7 +408,7 @@ a:hover
 
 
 footer {
-  height: 300px;
+  height: 150px;
   box-shadow: 0px 30px 35px 2px #656565;
   background-color: #ffffff;
 
@@ -433,16 +433,37 @@ footer {
 
 }
 
-#ligne{
+#ligne, #ligne1, #ligne2, #ligne3{
 
   height :1px;
   width: 100%;
   background-color: #ffffff;
 }
 
+
+
 .codeligne {
     clear: both;
     border-radius: 2px;
     margin: 12vh 0;
     
+}
+
+@media screen and (max-width: 425px)
+{
+
+  
+ #bouton {
+    color: #FFFFFF;
+    box-shadow: 0px 0px 10px #343434;
+    border-radius: 10px;
+    border: 1px solid #656565;
+    background: #cfcfcf;
+    background: linear-gradient(#cfcfcf, #656565);
+    height: 35px;
+    width: 175px;
+    font-size: 15px;
+    font-family: NordicaThin, arial;
+    text-align: center;
+}
 }
